--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-native": "0.61.5",
+    "react-native-linear-gradient": "^2.5.6"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
