--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^5.0.9",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
