--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/native": "^5.0.9",
+    "http": "^0.0.0",
     "lottie-react-native": "^3.3.2",
     "mysql": "^2.18.1",
     "react": "16.9.0",
@@ -28,7 +29,8 @@
     "react-native-screens": "^2.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.2",
-    "react-navigation-stack": "^2.2.3"
+    "react-navigation-stack": "^2.2.3",
+    "requestify": "^0.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
