--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.2",
     "react-navigation-stack": "^2.2.3",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "requestify": "^0.2.5"
   },
   "devDependencies": {
