--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.0.9",
     "http": "^0.0.0",
     "lottie-react-native": "^3.3.2",
+    "moment": "^2.24.0",
     "mysql": "^2.18.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
