--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.2",
     "react-navigation-stack": "^2.2.3",
+    "react-navigation-tabs": "^2.8.4",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
