--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.61.5",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-inappbrowser-reborn": "^3.3.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-loader": "^1.2.1",
