--- a/ios/pizza.xcodeproj/xcshareddata/xcschemes/pizza.xcscheme
+++ b/ios/pizza.xcodeproj/xcshareddata/xcschemes/pizza.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "pizza.app"
-               BlueprintName = "pizza"
-               ReferencedContainer = "container:pizza.xcodeproj">
+               BuildableName = "2020pizza.app"
+               BlueprintName = "2020pizza"
+               ReferencedContainer = "container:2020pizza.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "pizzaTests.xctest"
-               BlueprintName = "pizzaTests"
-               ReferencedContainer = "container:pizza.xcodeproj">
+               BuildableName = "2020pizzaTests.xctest"
+               BlueprintName = "2020pizzaTests"
+               ReferencedContainer = "container:2020pizza.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "pizzaTests.xctest"
-               BlueprintName = "pizzaTests"
-               ReferencedContainer = "container:pizza.xcodeproj">
+               BuildableName = "2020pizzaTests.xctest"
+               BlueprintName = "2020pizzaTests"
+               ReferencedContainer = "container:2020pizza.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "pizza.app"
-            BlueprintName = "pizza"
-            ReferencedContainer = "container:pizza.xcodeproj">
+            BuildableName = "2020pizza.app"
+            BlueprintName = "2020pizza"
+            ReferencedContainer = "container:2020pizza.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "pizza.app"
-            BlueprintName = "pizza"
-            ReferencedContainer = "container:pizza.xcodeproj">
+            BuildableName = "2020pizza.app"
+            BlueprintName = "2020pizza"
+            ReferencedContainer = "container:2020pizza.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "pizza.app"
-            BlueprintName = "pizza"
-            ReferencedContainer = "container:pizza.xcodeproj">
+            BuildableName = "2020pizza.app"
+            BlueprintName = "2020pizza"
+            ReferencedContainer = "container:2020pizza.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
