--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -133,11 +133,11 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.pizza"
+        applicationId "com.twentypizza"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 7
+        versionName "1.6"
     }
     signingConfigs {
         release {
@@ -173,7 +173,6 @@ android {
             // Caution! In production, you need to generate your own keystore file.
             // see https://facebook.github.io/react-native/docs/signed-apk-android.
         signingConfig signingConfigs.release
-            signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
