--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -20,7 +20,7 @@
 android.useAndroidX=true
 android.enableJetifier=true
 
-MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
-MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
-MYAPP_UPLOAD_STORE_PASSWORD=pizza123
-MYAPP_UPLOAD_KEY_PASSWORD=pizza123
+MYAPP_UPLOAD_STORE_FILE= release-pizza-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=usama_pizza
+MYAPP_UPLOAD_STORE_PASSWORD=frequency
+MYAPP_UPLOAD_KEY_PASSWORD=frequency
